<resources>
    <string name="app_name">App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>

    <string name="toast_message">This button will launch my %s project</string>
</resources>
