<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_main"
    tools:context="com.example.android.appportfolio.MainActivityFragment"
    android:orientation="vertical"
    android:background="@color/color_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:text="@string/popular_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_popular_movies"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/color_button"
                android:textColor="@android:color/white"
                android:onClick="onClickButton" />

            <Button
                android:text="@string/stock_hawk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_stock_hawk"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:onClick="onClickButton" />

            <Button
                android:text="@string/build_it_bigger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_build_it_bigger"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/color_button"
                android:textColor="@android:color/white"
                android:onClick="onClickButton" />

            <Button
                android:text="@string/make_your_app_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_make_your_app_material"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:onClick="onClickButton" />

            <Button
                android:text="@string/go_ubiquitous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_go_ubiquitous"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/color_button"
                android:textColor="@android:color/white"
                android:onClick="onClickButton" />

            <Button
                android:text="@string/capstone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_capstone"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:onClick="onClickButton" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>
